# rs-metrics-process

./: .gitignore  Cargo.toml  LICENSE  README.md  README.tpl
.github/workflows/: audit.yml  build.yml  test.yml
examples/basic/: Cargo.toml  README.md
examples/basic/src/: main.rs
examples/with_axum/: Cargo.toml  README.md
examples/with_axum/src/: main.rs
src/: collector.rs  lib.rs
src/collector/: dummy.rs  linux.rs  macos.rs  openbsd.rs  windows.rs
src/implementation/: freebsd.rs  windows.rs
