[package]
name = "metrics-process"
version = "1.0.12"
authors = ["Alisue <lambdalisue@gmail.com>"]
edition = "2018"

description = "Cross-platform Prometheus style process metrics collector of metrics crate"
repository = "https://github.com/lambdalisue/rs-metrics-process"
license = "MIT"
readme = "README.md"
keywords = ["cross-platform", "metrics", "prometheus", "open-metrics", "process"]

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metrics = "0.21.0"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14.2"
mach2 = "0.4"
once_cell = "1.13.1"
rlimit = "0.10.0"

[target.'cfg(target_os = "linux")'.dependencies]
once_cell = "1.13.1"
procfs = { version = "0.16.0", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.51.0"
features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
]

[dev-dependencies]
assert_matches = "1.5.0"
axum = "0.7.1"
metrics-exporter-prometheus = "0.12.0"
tokio = { version = "1.20.1", features = ["full"] }
