[package]
name = "with_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
metrics = "0.20.1"
metrics-exporter-prometheus = { version = "0.11.0", default-features = false }
metrics-process = { path = "../../"}
tokio = { version = "1.20.1", features = ["full"] }
